--- a/Projet2Conception/.classpath
+++ b/Projet2Conception/.classpath
@@ -7,5 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/dinak/Downloads/sqlite-jdbc-3.39.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dinak/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dinak/Downloads/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
